src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-weight: 400;
  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  height: 100%;
}

body {
  color: #213547;
  --background-color: #fafafa;
  --border-color: #347009;

  --image-grayscale: 0;
  --image-opacity: 100%;
}

body {
  background-color: var(--background-color);
}

body.dark {
  --color: rgba(255, 255, 255, 0.87);
  --background-color: #242424;
  --border-color: #26331d;

  --image-grayscale: 50%;
  --image-opacity: 90%;
}

img,
video {
  filter: grayscale(var(--image-grayscale)) opacity(var(--image-opacity));
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  body {
    color: #213547;
    --background-color: #fafafa;
    --border-color: #347009;

    --image-grayscale: 0;
    --image-opacity: 100%;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

